--- a/workflow-ui/webContent/view/intermediateEvents.xhtml
+++ b/workflow-ui/webContent/view/intermediateEvents.xhtml
@@ -6,6 +6,7 @@
 <h:body>
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
+      <f:event type="preRenderView" listener="#{loginBean.checkIfLoggedIn}" />
       <h:panelGroup styleClass="card card-w-title cleanup-container" layout="block">
         <h:outputText value="Intermediate Event Beans" styleClass="card-header-title" />
 
