--- a/workflow-ui/webContent/view/signals.xhtml
+++ b/workflow-ui/webContent/view/signals.xhtml
@@ -6,6 +6,7 @@
 <h:body>
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
+      <f:event type="preRenderView" listener="#{loginBean.checkIfLoggedIn}" />
       <h:form id="signalForm">
         <p:growl id="growl" showDetail="true" />
         <p:panelGrid columns="3" styleClass="ui-panelgrid-blank grid-smaller-padding" layout="grid"
