--- a/workflow-ui/webContent/view/tasks.xhtml
+++ b/workflow-ui/webContent/view/tasks.xhtml
@@ -5,11 +5,11 @@
 <h:body>
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
-    <f:event type="preRenderView" listener="#{tasksBean.checkIfLoggedIn}" />
+    <f:event type="preRenderView" listener="#{loginBean.checkIfLoggedIn}" />
     <h:form id="tasksForm">
       <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
         <div class="table-title-switch">
-          <h:outputText value="Tasks" style="font-size:16pt; font-weight:bold" />
+          <h:outputText value="Tasks" class="card-header-title" />
         </div>
         <ui:include src="/includes/components/tasksTable.xhtml" />
       </h:panelGroup>
