--- a/workflow-ui/webContent/includes/components/casesTable.xhtml
+++ b/workflow-ui/webContent/includes/components/casesTable.xhtml
@@ -22,33 +22,34 @@
       <p:tooltip for="caseIcon" value="ID: #{case.id}" position="top" />
     </p:column>
 
-    <p:column filterBy="#{case.getState()}" styleClass="icon-row">
-      <h:outputText id="caseState" styleClass="si si-lg si-#{casesBean.getStateIcon(case.getState())}" />
-      <p:tooltip for="caseState" value="State: #{case.getState()}" position="top" />
+    <p:column filterBy="#{case.state}" styleClass="icon-row" sortBy="#{case.state}">
+      <h:outputText id="caseState" styleClass="si si-lg si-#{casesBean.getStateIcon(case.state)}" />
+      <p:tooltip for="caseState" value="State: #{case.state}" position="top" />
     </p:column>
 
-    <p:column headerText="Name" filterBy="#{case.getName()}">
+    <p:column headerText="Name" filterBy="#{case.getName(case)}" sortBy="#{case.getName(case)}">
       <h:link outcome="caseDetails">
         <f:param name="case" value="#{case.id}"/>
-        <h:outputText value="#{casesBean.getName(case)}" />
+        <h:outputText id="caseName" value="#{casesBean.getName(case)}" />
+        <p:tooltip for="caseName" value="Case ID: #{case.id}" position="top" />
       </h:link>
     </p:column>
 
-    <p:column headerText="Creator" filterBy="#{case.getCreatorUserName()}">
+    <p:column headerText="Creator" filterBy="#{case.creatorUserName}" sortBy="#{case.creatorUserName}">
       <jc:user user="#{case.creatorUser}" />
     </p:column>
 
-    <p:column headerText="Start" style="text-align: center;">
+    <p:column headerText="Start" style="text-align: center;" sortBy="#{case.startTimestamp}">
       <jc:datetime id="startTime" datetime="#{case.startTimestamp}"/>
     </p:column>
 
-    <p:column headerText="End" style="text-align: center;">
+    <p:column headerText="End" style="text-align: center;" sortBy="#{case.endTimestamp}">
       <jc:datetime id="endTime" datetime="#{case.endTimestamp}"/>
     </p:column>
 
     <p:column style="width: 60px; text-align: center;">
       <h:link outcome="caseDetails">
-        <f:param name="case" value="#{case.getId()}" />
+        <f:param name="case" value="#{case.id}" />
         <i class="si si-lg si-information-circle"></i>
       </h:link>
     </p:column>
