--- a/workflow-ui/webContent/includes/components/tasksTable.xhtml
+++ b/workflow-ui/webContent/includes/components/tasksTable.xhtml
@@ -17,36 +17,36 @@
       </p:outputPanel>
     </f:facet>
 
-    <p:column filterBy="#{task.state}" styleClass="icon-row">
+    <p:column filterBy="#{task.state}" styleClass="icon-row" sortBy="#{task.state}">
       <h:outputText id="taskState" styleClass="si si-lg si-#{tasksBean.getStateIcon(task.state)}" />
       <p:tooltip for="taskState" value="State: #{task.state}" position="top" />
     </p:column>
 
-    <p:column id="priority" filterBy="#{task.priority}" styleClass="icon-row">
+    <p:column id="priority" filterBy="#{task.priority}" styleClass="icon-row" sortBy="#{task.priority}">
       <h:outputText id="taskPrio" styleClass="si si-lg si-#{tasksBean.getPriorityIcon(task.priority)}" />
       <p:tooltip for="taskPrio" value="Priority: #{task.priority}" position="top" />
     </p:column>
 
-    <p:column headerText="Name" filterBy="#{task.name}">
+    <p:column headerText="Name" filterBy="#{task.name}" sortBy="#{task.name}">
       <h:commandLink action="#{tasksBean.executeTask(task.id)}">
         <h:outputText id="taskName" value="#{tasksDetailsBean.getName(task)}" />
         <p:tooltip for="taskName" value="Task ID: #{task.id}" position="top" />
       </h:commandLink>
     </p:column>
 
-    <p:column headerText="Responsible" filterBy="#{task.activator}" rendered="#{!tasksBean.checkIfPersonalTasks()}">
+    <p:column headerText="Responsible" filterBy="#{task.activator}" sortBy="#{task.activatorName}" rendered="#{!tasksBean.checkIfPersonalTasks()}">
       <jc:user user="#{task.activator}" />
     </p:column>
 
-    <p:column headerText="Start" style="text-align: center;">
+    <p:column headerText="Start" style="text-align: center;" sortBy="#{task.startTimestamp}">
       <jc:datetime id="startTime" datetime="#{task.startTimestamp}"/>
     </p:column>
 
-    <p:column headerText="Expiry" style="text-align: center;" rendered="#{tasksBean.checkIfPersonalTasks()}">
+    <p:column headerText="Expiry" style="text-align: center;" sortBy="#{task.expiryTimestamp}" rendered="#{tasksBean.checkIfPersonalTasks()}">
       <jc:datetime id="expiryTime" datetime="#{task.expiryTimestamp}"/>
     </p:column>
 
-    <p:column headerText="End" style="text-align: center;" rendered="#{!tasksBean.checkIfPersonalTasks()}">
+    <p:column headerText="End" style="text-align: center;" sortBy="#{task.endTimestamp}" rendered="#{!tasksBean.checkIfPersonalTasks()}">
       <jc:datetime id="endTime" datetime="#{task.endTimestamp}"/>
     </p:column>
 
