--- a/workflow-ui/webContent/includes/components/userTable.xhtml
+++ b/workflow-ui/webContent/includes/components/userTable.xhtml
@@ -15,22 +15,22 @@
         <f:facet name="header">
           <p:outputPanel>
             <h:outputText value="Search:" />
-            <p:inputText id="globalFilter" onkeyup="PF('usersTable').filter()" style="width:150px"
+            <p:inputText id="globalFilter" onkeyup="PF('usersTable').filter()"
               placeholder="Enter keyword" />
           </p:outputPanel>
         </f:facet>
 
-        <p:column headerText="Username" filterBy="#{user.name}" filterStyle="display: none">
+        <p:column headerText="Username" filterBy="#{user.name}" sortBy="#{user.name}">
           <h:outputText value="#{user.name}">
             <i class="si si-single-neutral-actions table-icon"></i>
           </h:outputText>
         </p:column>
 
-        <p:column headerText="Fullname" filterBy="#{user.fullname}" filterStyle="display: none">
+        <p:column headerText="Fullname" filterBy="#{user.fullname}" sortBy="#{user.fullname}">
           <h:outputText value="#{user.fullname}" />
         </p:column>
 
-        <p:column headerText="Roles" filterBy="#{user.roles}"
+        <p:column headerText="Roles" filterBy="#{user.roles}" sortBy="#{user.roles}"
          filterStyle="display: none" colspan="2">
           <h:outputText value="#{user.roles}" />
         </p:column>
