--- a/workflow-ui/webContent/includes/components/casesTable.xhtml
+++ b/workflow-ui/webContent/includes/components/casesTable.xhtml
@@ -47,7 +47,7 @@
       <jc:datetime id="endTime" datetime="#{case.endTimestamp}"/>
     </p:column>
 
-    <p:column style="width: 60px; text-align: center;">
+    <p:column styleClass="icon-row">
       <h:link outcome="caseDetails">
         <f:param name="case" value="#{case.id}" />
         <i class="si si-lg si-information-circle"></i>
