--- a/workflow-ui/webContent/view/cleanup.xhtml
+++ b/workflow-ui/webContent/view/cleanup.xhtml
@@ -9,8 +9,9 @@
       <h:form id="clanupForm">
         <p:growl id="growl" showDetail="true" />
         <h:panelGroup styleClass="card card-w-title cleanup-container" layout="block">
-          <i class="si si-recycling-trash-bin-2 card-header-title margin-right-5"/>
-          <h:outputText styleClass="card-header-title" value="Cleanup" />
+          <div class="straight-text-icon card-header-title">
+            <h:outputText value="Cleanup" />
+          </div>
           <p:outputPanel styleClass="margin-top-5">
             <h:outputText value="When you click throuh different processes you create different types of data like cases, tasks etc. Here you can clean that data to reset your designer."/>
           </p:outputPanel>
