--- a/workflow-ui/webContent/view/starts.xhtml
+++ b/workflow-ui/webContent/view/starts.xhtml
@@ -8,7 +8,9 @@
     <ui:define name="content">
       <h:form id="startsForm">
         <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
-          <h:outputText value="Starts" styleClass="card-header-title" />
+          <div class="straight-text-icon card-header-title">
+            <h:outputText value="Starts"/>
+          </div>
           <p:panel styleClass="main-starts-container">
             <f:facet name="header">
               <p:outputPanel>
