--- a/workflow-ui/webContent/view/allTasks.xhtml
+++ b/workflow-ui/webContent/view/allTasks.xhtml
@@ -8,8 +8,8 @@
     <f:event type="preRenderView" listener="#{loginBean.checkIfLoggedIn}" />
     <h:form id="tasksForm">
       <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
-        <div class="table-title-switch">
-          <h:outputText value="All Tasks" class="card-header-title" />
+        <div class="straight-text-icon card-header-title">
+          <h:outputText value="All Tasks"/>
         </div>
         <ui:include src="/includes/components/tasksTable.xhtml" />
       </h:panelGroup>
