--- a/workflow-ui/webContent/view/home.xhtml
+++ b/workflow-ui/webContent/view/home.xhtml
@@ -1,12 +1,73 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://xmlns.jcp.org/jsf/core"
   xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
   xmlns:ic="http://ivyteam.ch/jsf/component" xmlns:p="http://primefaces.org/ui"
-  xmlns:pe="http://primefaces.org/ui/extensions">
+  xmlns:pe="http://primefaces.org/ui/extensions" xmlns:jc="http://java.sun.com/jsf/composite/components">
 
 <h:body>
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
-      <p>Hello this is home</p>
+      <h:form id="form">
+        <p:panelGrid columns="2" layout="grid" styleClass="custom-grid grid-smaller-padding"
+          columnClasses="ui-g-12 ui-lg-4, ui-g-12 ui-lg-8">
+
+          <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
+            <div class="straight-text-icon card-header-title">
+              <h:outputText value="Last starts" />
+            </div>
+            <p:dataTable id="lastStarts" var="start" value="#{homepageBean.lastStarts}"
+                rows="10" styleClass="margin-top-10 table-header-none" rendered="#{not empty homepageBean.lastStarts}">
+              <p:column styleClass="last-start-element">
+                <p:commandLink id="last-start-link" actionListener="#{start.execute}" styleClass="straight-text-icon">
+                  <i class="si si-lg si-controls-play margin-right-10"/>
+                  <h:outputText value="#{start.displayName}" />
+                </p:commandLink>
+              </p:column>
+            </p:dataTable>
+            <h:panelGrid rendered="#{empty homepageBean.lastStarts}" styleClass="margin-top-10">
+              <h:outputText>You haven't started any processes yet</h:outputText>
+              <p:button value="Go to starts page" outcome="starts.xhtml"></p:button>
+            </h:panelGrid>
+          </h:panelGroup>
+
+          <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
+            <div class="straight-text-icon card-header-title">
+              <h:outputText value="My tasks" />
+            </div>
+            <p:dataTable id="activeTasks" var="task" value="#{homepageBean.tasksDataModel}" lazy="true"
+             rows="10" styleClass="margin-top-10" rendered="#{homepageBean.tasksSize gt 0}">
+              <p:column styleClass="icon-row">
+                <i class="si si-lg si-task-list-edit margin-right-5" />
+              </p:column>
+              <p:column styleClass="icon-row" sortBy="#{task.priority}">
+                <h:outputText id="taskPrio" styleClass="si si-lg si-#{tasksBean.getPriorityIcon(task.priority)}" />
+                <p:tooltip for="taskPrio" value="Priority: #{task.priority}" position="top" />
+              </p:column>
+              <p:column headerText="Name" sortBy="#{task.name}">
+                <h:commandLink id="startTaskLink" action="#{tasksBean.executeTask(task.id)}">
+                  <h:outputText id="taskName" value="#{tasksDetailsBean.getName(task)}" />
+                  <p:tooltip for="taskName" value="Task ID: #{task.id}" position="top" />
+                </h:commandLink>
+              </p:column>
+              <p:column headerText="Start" sortBy="#{task.startTimestamp}">
+                <jc:datetime id="startTime" datetime="#{task.startTimestamp}" />
+              </p:column>
+              <p:column headerText="Expiry" sortBy="#{task.expiryTimestamp}">
+                <jc:datetime id="expiryTime" datetime="#{task.expiryTimestamp}" />
+              </p:column>
+              <p:column styleClass="icon-row">
+                <h:link outcome="taskDetails">
+                  <f:param name="task" value="#{task.id}" />
+                  <i class="si si-lg si-information-circle"></i>
+                </h:link>
+              </p:column>
+            </p:dataTable>
+            <h:panelGrid rendered="#{homepageBean.tasksSize eq 0}" styleClass="margin-top-10">
+              <h:outputText value="You don't have any active tasks. Go take a coffee break 😊☕"/>
+            </h:panelGrid>
+          </h:panelGroup>
+
+        </p:panelGrid>
+      </h:form>
     </ui:define>
   </ui:composition>
 </h:body>
