--- a/workflow-ui/webContent/view/cleanup.xhtml
+++ b/workflow-ui/webContent/view/cleanup.xhtml
@@ -8,7 +8,7 @@
       <f:event type="preRenderView" listener="#{loginBean.checkIfLoggedIn}" />
       <h:form id="clanupForm">
         <p:growl id="growl" showDetail="true" />
-        <h:panelGroup styleClass="card card-w-title cleanup-container" layout="block">
+        <h:panelGroup styleClass="card card-w-title custom-card cleanup-container" layout="block">
           <div class="straight-text-icon card-header-title">
             <h:outputText value="Cleanup" />
           </div>
