--- a/workflow-ui/webContent/view/home.xhtml
+++ b/workflow-ui/webContent/view/home.xhtml
@@ -7,7 +7,7 @@
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
       <h:form id="form">
-        <p:panelGrid columns="2" layout="grid" styleClass="custom-grid grid-smaller-padding"
+        <p:panelGrid columns="2" layout="grid" styleClass="custom-grid"
           columnClasses="ui-g-12 ui-lg-4, ui-g-12 ui-lg-8">
 
           <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
