--- a/workflow-ui/webContent/view/intermediateEvents.xhtml
+++ b/workflow-ui/webContent/view/intermediateEvents.xhtml
@@ -7,7 +7,7 @@
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
       <f:event type="preRenderView" listener="#{loginBean.checkIfLoggedIn}" />
-      <h:panelGroup styleClass="card card-w-title cleanup-container" layout="block">
+      <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
         <h:outputText value="Intermediate Event Beans" styleClass="card-header-title" />
 
         <h:form id="intermediateEventBeansForm">
