--- a/workflow-ui/webContent/view/taskDetails.xhtml
+++ b/workflow-ui/webContent/view/taskDetails.xhtml
@@ -13,7 +13,7 @@
     <ui:define name="content">
 
       <h:form id="form">
-        <h:panelGroup styleClass="card card-w-title" layout="block">
+        <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
           <div class="task-detail-title straight-text-icon">
             <i class="si si-lg si-common-file-text detail-title-icon" />
             <h:outputText value="Description" />
