--- a/workflow-ui/webContent/view/intermediateEventDetails.xhtml
+++ b/workflow-ui/webContent/view/intermediateEventDetails.xhtml
@@ -13,7 +13,7 @@
       <ui:param name="intermediateElement" value="#{intermediateEventDetailsBean.selectedIntermediateElement}"></ui:param>
 
       <h:form id="intermediateElementDetailsForm">
-        <h:panelGroup styleClass="card card-w-title" layout="block">
+        <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
           <div class="task-detail-title straight-text-icon">
             <i class="si si-lg si-common-file-text detail-title-icon" />
             <h:outputText value="Description" />
@@ -33,7 +33,7 @@
           </p:panelGrid>
         </h:panelGroup>
 
-        <h:panelGroup styleClass="card card-w-title" layout="block">
+        <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
           <div class="task-detail-title straight-text-icon">
             <i class="si si-lg si-analytics-graph margin-right-5" />
             <h:outputText value="Events" />
