--- a/workflow-ui/webContent/includes/components/signals/firedSignals.xhtml
+++ b/workflow-ui/webContent/includes/components/signals/firedSignals.xhtml
@@ -5,7 +5,7 @@
   xmlns:jc="http://java.sun.com/jsf/composite/components">
 
   <p:dataTable id="firedSignalsTable" var="signal" value="#{signalsBean.signalsModel}" styleClass="margin-top-10"
-    rows="10" paginator="true" paginatorAlwaysVisible="false" lazy="true"
+    rows="10" paginator="true" paginatorAlwaysVisible="false" lazy="true" sortBy="#{signal.sentTimestamp}" sortOrder="descending"
     paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
     currentPageReportTemplate="{startRecord}-{endRecord} of {totalRecords} records" paginatorPosition="bottom"
     rowsPerPageTemplate="5,10,{ShowAll|'All'}">
