--- a/workflow-ui/webContent/includes/components/userTable.xhtml
+++ b/workflow-ui/webContent/includes/components/userTable.xhtml
@@ -9,7 +9,7 @@
       <h:outputText value="Click user to login" />
       <p:dataTable id="users" var="user" value="#{loginTableBean.users}" widgetVar="usersTable"
         emptyMessage="No users found with given criteria" style="margin-top:10px"
-        selectionMode="single" rowKey="#{user.fullname}">
+        selectionMode="single" rowKey="#{user.fullname}" sortBy="#{user.name}">
         <p:ajax event="rowSelect" listener="#{loginBean.loginFromTable}" update="@form" />
 
         <f:facet name="header">
