--- a/workflow-ui/webContent/view/home.xhtml
+++ b/workflow-ui/webContent/view/home.xhtml
@@ -33,8 +33,8 @@
             <div class="straight-text-icon card-header-title">
               <h:outputText value="My tasks" />
             </div>
-            <p:dataTable id="activeTasks" var="task" value="#{homepageBean.tasksDataModel}" lazy="true"
-             rows="10" styleClass="margin-top-10" rendered="#{homepageBean.tasksSize gt 0}">
+            <p:dataTable id="activeTasks" var="task" value="#{homepageBean.tasksDataModel}" lazy="true" rows="10"
+             styleClass="margin-top-10" rendered="#{homepageBean.tasksSize gt 0}" sortBy="#{task.startTimestamp}" sortOrder="descending">
               <p:column styleClass="icon-row">
                 <i class="si si-lg si-task-list-edit margin-right-5" />
               </p:column>
