--- a/workflow-ui/webContent/includes/components/caseDetails/taskList.xhtml
+++ b/workflow-ui/webContent/includes/components/caseDetails/taskList.xhtml
@@ -4,11 +4,10 @@
   xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions"
   xmlns:jc="http://java.sun.com/jsf/composite/components">
 
-  <p:dataTable id="tasks" var="task" value="#{casesDetailsBean.tasks}"
+  <p:dataTable id="tasks" var="task" value="#{casesDetailsBean.tasks}" rowKey="#{task.name}"
     widgetVar="tasksTable" emptyMessage="No Tasks found with given criteria" lazy="true"
     paginatorPosition="bottom" rows="10" rowsPerPageTemplate="10,20,50" paginator="true" paginatorAlwaysVisible="false"
     paginatorTemplate="{RowsPerPageDropdown} {FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}">
-
     <p:column filterBy="#{task.state}" styleClass="icon-row">
       <h:outputText id="taskState" styleClass="si si-lg si-#{tasksBean.getStateIcon(task.state)}" />
       <p:tooltip for="taskState" value="State: #{task.state}" position="top" />
