--- a/workflow-ui/webContent/view/caseDetails.xhtml
+++ b/workflow-ui/webContent/view/caseDetails.xhtml
@@ -30,7 +30,7 @@
             <ui:include src="/includes/components/caseDetails/description.xhtml" />
           </h:panelGroup>
 
-          <h:panelGroup styleClass="card card-w-title custom-card case-details-item"
+          <h:panelGroup styleClass="card card-w-title custom-card"
             layout="block">
             <div>
               <h:panelGroup layout="block" styleClass="task-detail-title straight-text-icon related-element">
@@ -41,7 +41,7 @@
             </div>
           </h:panelGroup>
 
-          <h:panelGroup styleClass="card card-w-title custom-card case-details-item"
+          <h:panelGroup styleClass="card card-w-title custom-card"
             layout="block">
             <h:panelGroup styleClass="table-title-switch">
               <h:panelGroup id="cardTitleContainer" styleClass="task-detail-title straight-text-icon related-element">
@@ -58,7 +58,7 @@
             <ui:include src="/includes/components/caseDetails/taskList.xhtml" />
           </h:panelGroup>
 
-          <h:panelGroup styleClass="card card-w-title custom-card case-details-item"
+          <h:panelGroup styleClass="card card-w-title custom-card"
             layout="block">
             <h:panelGroup layout="block" styleClass="task-detail-title straight-text-icon related-element">
               <i class="si si-lg si-task-list-approve detail-title-icon" />
@@ -67,7 +67,7 @@
             <ui:include src="/includes/components/caseDetails/caseList.xhtml" />
           </h:panelGroup>
 
-          <h:panelGroup styleClass="card card-w-title custom-card case-details-item"
+          <h:panelGroup styleClass="card card-w-title custom-card"
             layout="block">
             <h:panelGroup layout="block" styleClass="task-detail-title straight-text-icon related-element">
               <i class="si si-lg si-cog detail-title-icon" />
@@ -76,7 +76,7 @@
             <ui:include src="/includes/components/caseDetails/customFields.xhtml" />
           </h:panelGroup>
 
-          <h:panelGroup id="documentsContainer" styleClass="card card-w-title custom-card case-details-item"
+          <h:panelGroup id="documentsContainer" styleClass="card card-w-title custom-card"
             layout="block">
             <h:panelGroup layout="block" styleClass="task-detail-title straight-text-icon related-element">
               <i class="si si-lg si-office-file-doc-1 detail-title-icon" />
