--- a/workflow-ui/webContent/view/home.xhtml
+++ b/workflow-ui/webContent/view/home.xhtml
@@ -26,7 +26,7 @@
             </p:dataTable>
             <h:panelGrid rendered="#{empty homepageBean.lastStarts}" styleClass="margin-top-10">
               <h:outputText>You haven't started any processes yet</h:outputText>
-              <p:button value="Go to starts page" outcome="starts.xhtml"></p:button>
+              <p:button value="Go to starts page" outcome="starts.xhtml" icon="si si-navigation-menu"/>
             </h:panelGrid>
           </h:panelGroup>
 
