Layout/design changes and improvements
- Fixed frame spacing
- Lighter hover color
- Hover color on all tables
- Remove some columns from tables when window too small
- Case map container add margin bottom
- Subcases links width max-content

--- a/workflow-ui/webContent/includes/components/tasksTable.xhtml
+++ b/workflow-ui/webContent/includes/components/tasksTable.xhtml
@@ -39,19 +39,19 @@
       <jc:user user="#{task.activator}" />
     </p:column>
 
-    <p:column headerText="Start" style="text-align: center;" sortBy="#{task.startTimestamp}">
+    <p:column headerText="Start" style="text-align: center;" sortBy="#{task.startTimestamp}" priority="2">
       <jc:datetime id="startTime" datetime="#{task.startTimestamp}"/>
     </p:column>
 
-    <p:column headerText="Expiry" style="text-align: center;" sortBy="#{task.expiryTimestamp}" rendered="#{tasksBean.checkIfPersonalTasks()}">
+    <p:column headerText="Expiry" style="text-align: center;" sortBy="#{task.expiryTimestamp}" rendered="#{tasksBean.checkIfPersonalTasks()}" priority="2">
       <jc:datetime id="expiryTime" datetime="#{task.expiryTimestamp}"/>
     </p:column>
 
-    <p:column headerText="End" style="text-align: center;" sortBy="#{task.endTimestamp}" rendered="#{!tasksBean.checkIfPersonalTasks()}">
+    <p:column headerText="End" style="text-align: center;" sortBy="#{task.endTimestamp}" rendered="#{!tasksBean.checkIfPersonalTasks()}" priority="3">
       <jc:datetime id="endTime" datetime="#{task.endTimestamp}"/>
     </p:column>
 
-    <p:column styleClass="icon-row">
+    <p:column styleClass="icon-row" priority="2">
       <h:link outcome="taskDetails">
         <f:param name="task" value="#{task.id}" />
         <i class="si si-lg si-information-circle"></i>
