--- a/workflow-ui/webContent/includes/components/caseDetails/taskList.xhtml
+++ b/workflow-ui/webContent/includes/components/caseDetails/taskList.xhtml
@@ -23,7 +23,7 @@
       <p:tooltip for="taskName" value="Task ID: #{task.id}" position="top" />
     </p:column>
 
-    <p:column headerText="Responsible" style="text-align: center;">
+    <p:column headerText="Responsible" style="text-align: center;" priority="2">
       <jc:user user="#{task.activator}" />
     </p:column>
 
@@ -31,7 +31,7 @@
       <jc:datetime id="startTime" datetime="#{task.startTimestamp}"/>
     </p:column>
 
-    <p:column headerText="End" style="text-align: center;">
+    <p:column headerText="End" style="text-align: center;" priority="3">
       <jc:datetime id="endTime" datetime="#{task.endTimestamp}"/>
     </p:column>
 
