--- a/workflow-ui/webContent/includes/components/casesTable.xhtml
+++ b/workflow-ui/webContent/includes/components/casesTable.xhtml
@@ -18,7 +18,7 @@
       </p:outputPanel>
     </f:facet>
 
-    <p:column styleClass="icon-row">
+    <p:column styleClass="icon-row" priority="2">
       <h:outputText id="caseIcon" styleClass="si si-lg si-task-list-approve" />
       <p:tooltip for="caseIcon" value="ID: #{case.id}" position="top" />
     </p:column>
@@ -36,7 +36,7 @@
       </h:link>
     </p:column>
 
-    <p:column headerText="Creator" filterBy="#{case.creatorUserName}" sortBy="#{case.creatorUserName}">
+    <p:column headerText="Creator" filterBy="#{case.creatorUserName}" sortBy="#{case.creatorUserName}" priority="2">
       <jc:user user="#{case.creatorUser}" />
     </p:column>
 
@@ -44,7 +44,7 @@
       <jc:datetime id="startTime" datetime="#{case.startTimestamp}" />
     </p:column>
 
-    <p:column headerText="End" style="text-align: center;" sortBy="#{case.endTimestamp}">
+    <p:column headerText="End" style="text-align: center;" sortBy="#{case.endTimestamp}" priority="3">
       <jc:datetime id="endTime" datetime="#{case.endTimestamp}" />
     </p:column>
 
