--- a/workflow-ui/webContent/resources/css/workflow-ui.css
+++ b/workflow-ui/webContent/resources/css/workflow-ui.css
@@ -1,13 +1,21 @@
 :root {
   --accent-color-h: 200;
   --accent-color-s: 60%;
-  --accent-color-l: 60%;
-  --accent-light-color: hsl(var(--accent-color-h), var(--accent-color-s), 75%);
+  --accent-color-l: 65%;
+  --accent-light-color: hsl(var(--accent-color-h), var(--accent-color-s), 80%);
   --menuitem-active-bg-color: var(--accent-color);
+  --item-background-hover: rgba(144, 221, 233, 0.24);
 }
 
 body {
   min-width: 375px;
+}
+
+body .ui-datatable tbody tr.ui-state-hover,
+body .ui-datatable tbody tr.ui-state-highlight,
+body .ui-datatable tbody tr.ui-datatable-even.ui-state-hover,
+body .ui-datatable tbody tr.ui-datatable-even.ui-state-highlight {
+  background: var(--item-background-hover);
 }
 
 .layout-topbar {
@@ -188,6 +196,7 @@ body .ui-panelgrid .ui-panelgrid-cell {
   justify-content: space-around;
   align-items: center;
   margin-top: 16px;
+  margin-bottom: 16px;
 }
 
 .case-map-icon {
@@ -313,7 +322,7 @@ body .ui-panelgrid .ui-panelgrid-cell {
 
 .ui-accordion-content .start-element:hover {
   cursor: pointer;
-  background-color: #afced8;
+  background-color: var(--item-background-hover);
 }
 
 .start-element > div.ui-panel-content {
@@ -339,6 +348,7 @@ body .ui-panelgrid .ui-panelgrid-cell {
 
 .current-hierarchy-case {
   font-weight: bold;
+  max-width: fit-content;
 }
 
 .case-link {
@@ -346,6 +356,7 @@ body .ui-panelgrid .ui-panelgrid-cell {
   padding-bottom: 2px;
   display: flex;
   align-items: center;
+  max-width: max-content;
 }
 
 .case-link-icon {
