--- a/workflow-ui/webContent/view/frame.xhtml
+++ b/workflow-ui/webContent/view/frame.xhtml
@@ -5,7 +5,7 @@
 <h:body>
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
-      <div class="card">
+      <div class="card custom-card">
         <iframe id="iFrame" src="#{frameBean.taskUrl}" onload="checkUrl(this)" style="height: calc(100vh - 195px); width: 100%; border: 0;"></iframe>
       </div>
       <script>
