--- a/workflow-ui/webContent/view/home.xhtml
+++ b/workflow-ui/webContent/view/home.xhtml
@@ -38,7 +38,7 @@
              rows="10" styleClass="margin-top-10" rendered="#{homepageBean.tasksSize gt 0}"
              sortBy="#{task.startTimestamp}" sortOrder="descending" selectionMode="single">
               <p:ajax event="rowSelect" listener="#{tasksBean.executeTaskRow}" update="@form" />
-              <p:column styleClass="icon-row">
+              <p:column styleClass="icon-row" priority="2">
                 <i class="si si-lg si-task-list-edit margin-right-5" />
               </p:column>
               <p:column styleClass="icon-row" sortBy="#{task.priority}">
@@ -54,7 +54,7 @@
               <p:column headerText="Start" sortBy="#{task.startTimestamp}">
                 <jc:datetime id="startTime" datetime="#{task.startTimestamp}" />
               </p:column>
-              <p:column headerText="Expiry" sortBy="#{task.expiryTimestamp}">
+              <p:column headerText="Expiry" sortBy="#{task.expiryTimestamp}" priority="2">
                 <jc:datetime id="expiryTime" datetime="#{task.expiryTimestamp}" />
               </p:column>
               <p:column styleClass="icon-row">
