XIVYWF-207 Mark active navigation item

--- a/workflow-ui/webContent/includes/template/topbar.xhtml
+++ b/workflow-ui/webContent/includes/template/topbar.xhtml
@@ -3,7 +3,7 @@
   xmlns:jsf="http://xmlns.jcp.org/jsf">
   <div class="layout-topbar" style="padding-right: 24px;">
     <div class="container">
-      <a class="topbar-logo" href="/">
+      <a class="topbar-logo" href="#{sidebarBean.appContextPath}">
         <h:graphicImage name="resources/images/axonivy-logo-2021-rgb-neg.svg" alt="Axon Ivy" />
       </a>
     </div>
